[tool.poetry]
name = "pfund-plugins"
version = "0.0.1.dev1"
description = "lightweight plugins for pfund's ecosystem, e.g. LLM"
authors = ["Stephen Yau <softwareentrepreneer+pfund-plugins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litellm = {version = "^1.60.4", optional = true}
unitycatalog-ai = "^0.1.0"

[tool.poetry.extras]
llm = ["litellm"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
