[project]
name = "pfund-plugins"
version = "0.0.1.dev1"
description = "lightweight plugins for pfund's ecosystem, e.g. LLM"
authors = [
    { name="Stephen Yau", email="softwareentrepreneer+pfund-plugins@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # TODO: build around pluggy
    "pluggy (>=1.6.0,<2.0.0)",
    "unitycatalog-ai (>=0.1.0,<0.2.0)",
]

[project.optional-dependencies]
llm = [
    "litellm (>=1.60.4,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
